# FastAPI

./: .env_local  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  run.sh
alembic/: env.py
alembic/versions/: daab2e9a27c4_initial_migration.py
src/: main.py
src/core/: celery_worker.py  config.py  database.py
src/models/: document.py
src/schemas/: document_schema.py
src/services/: document_service.py
src/utils/: decorators.py  exceptions.py
tests/: conftest.py  factories.py  test_document_text.py  test_ok.py
